--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </div>
 </div>
 <div class="nav-buttons">
-    <button id="prevBtn" class="btn"  style="display: none" disabled>Zurück</button>
+    <button id="prevBtn" class="btn" disabled>Zurück</button>
     <button id="nextBtn" class="btn">Weiter</button>
 </div>
 
