almost final changes

--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
         <section class="slide" id="slide0">
             <p>
                 Vielen Dank für deine Teilnahme an meiner Bachelorarbeit!<br><br>
-                Im Rahmen meiner Bachelorarbeit untersuche ich, wie Menschen Daten wahrnehmen. <br>
+                Im Rahmen dieser Arbeit untersuche ich, wie Menschen Daten wahrnehmen. <br>
                 Bitte nimm nur daran Teil, wenn du aktuell Student*in im Bachelor oder Master bist.<br>
                 Dir werden gleich einige Daten präsentiert,
-                nimm dir ruhig Zeit diese wahrzunehmen und beantworte dann bitte einige Fragen. <br>
+                nimm dir ruhig Zeit diese wahrzunehmen und beantworte dann bitte einige Fragen. <br><br>
+
+                Disclaimer: Wenn du von einem Handy aus teilnimmst, hebe bitte die Stummschaltung auf, ansonsten wirst du die auditiven Inhalte nicht hören können!
+                <br><br>
 
                 Wenn du alles gelesen hast kommst zu mit klick auf den "weiter"- Button zum nächsten Abschnitt. <br>
                 <br>
@@ -60,7 +63,6 @@
 
         <section class="slide" id="slide3">
             <h2>Sonifikation</h2>
-
             <div class="container">
                 <button class="btn" id="soniBTN">Global CO₂</button>
                 <button class="btn" id="tempBTN">Global Temperature</button>
@@ -90,7 +92,7 @@
     </div>
 </div>
 <div class="nav-buttons">
-    <button id="prevBtn" class="btn" disabled>Zurück</button>
+    <button id="prevBtn" class="btn" disabled style="display: none">Zurück</button>
     <button id="nextBtn" class="btn">Weiter</button>
 </div>
 
