--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                 Dir werden gleich einige Daten präsentiert,
                 nimm dir ruhig Zeit diese wahrzunehmen und beantworte dann bitte einige Fragen. <br><br>
 
-                Disclaimer: Wenn du von einem Handy aus teilnimmst, hebe bitte die Stummschaltung auf, ansonsten wirst du die auditiven Inhalte nicht hören können!
+                Disclaimer: Bitte verwende wenn möglich Kopfhörer, damit du die auditiven Inhalte besser wahrnehmen kannst.
+                <br>
+                Wenn du von einem Handy aus teilnimmst, hebe bitte die Stummschaltung auf, ansonsten wirst du die auditiven Inhalte nicht hören können!
                 <br><br>
 
                 Wenn du alles gelesen hast kommst zu mit klick auf den "weiter"- Button zum nächsten Abschnitt. <br>
@@ -38,18 +40,18 @@
             <div class="button-group">
                 <button id="showImg1Btn" class="btn">Global Sea Level</button>
                 <button id="showImg2Btn" class="btn">Flüchtlinge weltweit</button>
-                <button id="showImg3Btn" class="btn">Mietenindex DE</button>
+                <button id="showImg3Btn" class="btn">Femizide DE</button>
             </div>
 
             <div id="gallery" class="image-gallery">
                 <div class="image-item hidden" id="itemCo2">
-                    <img src="/datasets/graph_sealevel%20(1).png" alt="Sea Level">
+                    <img src="/datasets/graph_sealevel%20(1).png" alt="Sea Level Rise">
                 </div>
                 <div class="image-item hidden" id="itemTemp">
-                    <img src="/datasets/statistic_id159744_fluechtlinge-weltweit-bis-2023.png" alt="Temperature Trend">
+                    <img src="/datasets/statistic_id159744_fluechtlinge-weltweit-bis-2023.png" alt="Anzahl Flüchtlinge Weltweit">
                 </div>
                 <div class="image-item hidden" id="itemLpi">
-                    <img src="/datasets/statistic_id70132_wohnungsmietindex-fuer-deutschland-bis-2024.png" alt="LPI Trend">
+                    <img src="/datasets/statistic_id1536953_opfer-von-femiziden-in-deutschland-bis-2023.png" alt="Anzahl Femizide Deutschland">
                 </div>
             </div>
 
