--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </div>
 </div>
 <div class="nav-buttons">
-    <button id="prevBtn" class="btn" disabled style="display: none">Zurück</button>
+    <button id="prevBtn" class="btn" style="display: none">Zurück</button>
     <button id="nextBtn" class="btn">Weiter</button>
 </div>
 
