--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
                 Disclaimer: Bitte verwende wenn möglich Kopfhörer, damit du die auditiven Inhalte besser wahrnehmen kannst.
                 <br>
+                Außerdem empfehle ich dir, von einem Laptop/PC teilzunehmen.<br>
                 Wenn du von einem Handy aus teilnimmst, hebe bitte die Stummschaltung auf, ansonsten wirst du die auditiven Inhalte nicht hören können!
                 <br><br>
 
@@ -37,6 +38,12 @@
         </section>
 
         <section class="slide" id="slide1">
+            <div class="explText">
+                <p>Hier kannst du dir einige ausgewählte Daten anschauen. <br>
+                Bitte nimm dir ein bisschen Zeit um dir alle anzugucken, bevor du auf weiter gehst. <br>
+                Mit klick auf den jeweiligen Button erscheint der Datensatz. <br>
+                Du kannst natürlich auch mehrere gleichzeitig anschauen!</p>
+            </div>
             <div class="button-group">
                 <button id="showImg1Btn" class="btn">Global Sea Level</button>
                 <button id="showImg2Btn" class="btn">Flüchtlinge weltweit</button>
@@ -65,6 +72,14 @@
 
         <section class="slide" id="slide3">
             <h2>Sonifikation</h2>
+            <div class="explText">
+                <p>Hier kannst du dir einige ausgewählte Daten anhören. <br>
+                    Bitte nimm dir ein bisschen Zeit um dir alle anzuhören, bevor du auf weiter gehst. <br>
+                    Mit klick auf den jeweiligen Button erklingt der jeweilige Datensatz. <br>
+                    Falls du dir einzelne Jahre anhören willst, kannst du dies über den Slider tun.<br>
+                    Solltest du empfindlich auf die Töne reagieren, kannst du die Sonifikation jederzeit mit dem Stop-Button beenden!
+                </p>
+            </div>
             <div class="container">
                 <button class="btn" id="soniBTN">Global CO₂</button>
                 <button class="btn" id="tempBTN">Global Temperature</button>
@@ -94,7 +109,7 @@
     </div>
 </div>
 <div class="nav-buttons">
-    <button id="prevBtn" class="btn" style="display: none">Zurück</button>
+    <button id="prevBtn" class="btn">Zurück</button>
     <button id="nextBtn" class="btn">Weiter</button>
 </div>
 
