--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 Dir werden gleich einige Daten präsentiert,
                 nimm dir ruhig Zeit diese wahrzunehmen und beantworte dann bitte einige Fragen. <br><br>
 
-                Disclaimer: Bitte verwende wenn möglich Kopfhörer, damit du die auditiven Inhalte besser wahrnehmen kannst.
-                <br>
+                Disclaimer: Bitte verwende wenn möglich Kopfhörer, damit du die auditiven Inhalte besser wahrnehmen kannst
+                und klicke dich bis zum Ende durch, du musst im Verlauf 2 Fragebögen ausfüllen.
                 Außerdem empfehle ich dir, von einem Laptop/PC teilzunehmen.<br>
                 Wenn du von einem Handy aus teilnimmst, hebe bitte die Stummschaltung auf, ansonsten wirst du die auditiven Inhalte nicht hören können!
                 <br><br>
@@ -109,7 +109,7 @@
     </div>
 </div>
 <div class="nav-buttons">
-    <button id="prevBtn" class="btn" style="display: none">Zurück</button>
+    <button id="prevBtn" class="btn"  style="display: none">Zurück</button>
     <button id="nextBtn" class="btn">Weiter</button>
 </div>
 
