--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                 <p>Hier kannst du dir einige ausgewählte Daten anschauen. <br>
                 Bitte nimm dir ein bisschen Zeit um dir alle anzugucken, bevor du auf weiter gehst. <br>
                 Mit klick auf den jeweiligen Button erscheint der Datensatz. <br>
-                Du kannst natürlich auch mehrere gleichzeitig anschauen!</p>
+                Du kannst natürlich auch mehrere gleichzeitig anschauen!<br>
+                Danach kommst du weiter zur Sonifikation.</p>
             </div>
             <div class="button-group">
                 <button id="showImg1Btn" class="btn">Global Sea Level</button>
@@ -110,7 +111,7 @@
     </div>
 </div>
 <div class="nav-buttons">
-    <button id="prevBtn" class="btn"  style="display: none">Zurück</button>
+    <button id="prevBtn" class="btn" style="display: none" >Zurück</button>
     <button id="nextBtn" class="btn">Weiter</button>
 </div>
 
