--- a/index.html
+++ b/index.html
@@ -106,7 +106,13 @@
         </section>
 
         <section class="slide" id="slide5">
-            <h2>Vielen Dank!<br>Du kannst diese Seite jetzt schließen.</h2>
+
+               <p class="explText">
+                   Vielen Dank!<br>
+                   Du kannst diese Seite jetzt schließen. <br>
+                   Löse den folgenden Survey Code unter https://www.surveycircle.com ein und erhalte durch SurveyCircle kostenlos Teilnehmer für deine Studie: <br>
+                   KRTD-NXY5-BK46-TLL5
+               </p>
         </section>
     </div>
 </div>
